[package]
name = "rust_os"
version = "0.1.0"
authors = ["jubgjf <guanjiannan@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.12"

[profile.dev]
panic = "abort"     # 禁用panic时的栈展开

[profile.release]
panic = "abort"     # 禁用panic时的栈展开

[package.metadata.bootimage]
build-command = ["xbuild"]